[project]
name = "bimba-go-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "fczajka"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "protobuf (>=6.31.0,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]

[tool.poetry]
packages = [
    {include = "app"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
