[tool.poetry]
name = "bimba-go-backend"
version = "0.1.0"
description = ""
authors = ["fczajka"]
readme = "README.md"
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.115.12,<0.116.0"
protobuf = ">=6.31.0,<7.0.0"
requests = ">=2.32.3,<3.0.0"
pydantic = ">=2.11.4,<3.0.0"
uvicorn = ">=0.34.2,<0.35.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
